<resources>
    <string name="app_name">Calculator_lesson1</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btn_dot">.</string>
    <string name="btn_mutiply">*</string>
    <string name="btn_split">/</string>
    <string name="btn_taway">-</string>
    <string name="btn_add">+</string>
    <string name="btn_clear">C</string>
    <string name="btn_del"><![CDATA[<-]]></string>
    <string name="btn_procent">%</string>
    <string name="btn_equally">=</string>
    <string name="switch_dark">dark</string>
    <string name="switch_light">light</string>
    <string name="theme">theme</string>
    <string name="setting_theme">Settings</string>
    <string name="return_btn">return</string>
    <string name="settings">settings</string>


</resources>