<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img"
        android:layout_width="800dp"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:src="@drawable/ic_feather_1689331"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setting_btn"
        style="@style/calculator_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_btn"
        style="@style/switch_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:checked="false"
        android:visibility="invisible"
        android:text="@string/theme"

        />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4"
        tools:context=".UI.MainActivity">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/view_resut"
            style="@style/text_view_style_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_height"
            android:layout_columnSpan="4"
            android:layout_gravity="fill_horizontal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_clear"
            style="@style/calculator_button_style"
            android:layout_width="@dimen/butn_width"
            android:layout_height="@dimen/butn_height"
            android:layout_margin="@dimen/butn_margin"
            android:backgroundTint="@color/tomato"
            android:text="@string/btn_clear"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_del"
            style="@style/calculator_button_style"
            android:layout_width="@dimen/butn_width"
            android:layout_height="@dimen/butn_height"
            android:layout_margin="@dimen/butn_margin"
            android:backgroundTint="@color/medium_purpue"
            android:text="@string/btn_del"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_procent"
            style="@style/calculator_button_style"
            android:layout_width="@dimen/butn_width"
            android:layout_height="@dimen/butn_height"
            android:layout_margin="@dimen/butn_margin"
            android:backgroundTint="@color/medium_purpue"
            android:text="@string/btn_procent"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_equally"
            style="@style/calculator_button_style"
            android:layout_width="@dimen/butn_width"
            android:layout_height="@dimen/butn_height"
            android:layout_margin="@dimen/butn_margin"
            android:backgroundTint="@color/light_sky_blue"
            android:text="@string/btn_equally"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_1"
            style="@style/calculator_button_style"
            android:layout_width="@dimen/butn_width"
            android:layout_height="@dimen/butn_height"
            android:layout_margin="@dimen/butn_margin"
            android:backgroundTint="@color/thistle"
            android:text="@string/btn1"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_2"
            style="@style/calculator_button_style"
            android:layout_width="@dimen/butn_width"
            android:layout_height="@dimen/butn_height"
            android:layout_margin="@dimen/butn_margin"
            android:backgroundTint="@color/thistle"
            android:text="@string/btn2"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_3"
            style="@style/calculator_button_style"
            android:layout_width="@dimen/butn_width"
            android:layout_height="@dimen/butn_height"
            android:layout_margin="@dimen/butn_margin"
            android:backgroundTint="@color/thistle"
            android:text="@string/btn3"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_mult"
            style="@style/calculator_button_style"
            android:layout_width="@dimen/butn_width"
            android:layout_height="@dimen/butn_height"
            android:layout_margin="@dimen/butn_margin"
            android:backgroundTint="@color/medium_purpue"
            android:text="@string/btn_mutiply"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_4"
            style="@style/calculator_button_style"
            android:layout_width="@dimen/butn_width"
            android:layout_height="@dimen/butn_height"
            android:layout_margin="@dimen/butn_margin"
            android:backgroundTint="@color/thistle"
            android:text="@string/btn4"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_5"
            style="@style/calculator_button_style"
            android:layout_width="@dimen/butn_width"
            android:layout_height="@dimen/butn_height"
            android:layout_margin="@dimen/butn_margin"
            android:backgroundTint="@color/thistle"
            android:text="@string/btn5"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_6"
            style="@style/calculator_button_style"
            android:layout_width="@dimen/butn_width"
            android:layout_height="@dimen/butn_height"
            android:layout_margin="@dimen/butn_margin"
            android:backgroundTint="@color/thistle"
            android:text="@string/btn6"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_split"
            style="@style/calculator_button_style"
            android:layout_width="@dimen/butn_width"
            android:layout_height="@dimen/butn_height"
            android:layout_margin="2dp"
            android:backgroundTint="@color/medium_purpue"
            android:text="@string/btn_split"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_7"
            style="@style/calculator_button_style"
            android:layout_width="@dimen/butn_width"
            android:layout_height="@dimen/butn_height"
            android:layout_margin="@dimen/butn_margin"
            android:backgroundTint="@color/thistle"
            android:text="@string/btn7"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_8"
            style="@style/calculator_button_style"
            android:layout_width="@dimen/butn_width"
            android:layout_height="@dimen/butn_height"
            android:layout_margin="@dimen/butn_margin"
            android:backgroundTint="@color/thistle"
            android:text="@string/btn8"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_9"
            style="@style/calculator_button_style"
            android:layout_width="@dimen/butn_width"
            android:layout_height="@dimen/butn_height"
            android:layout_margin="@dimen/butn_margin"
            android:backgroundTint="@color/thistle"
            android:text="@string/btn9"
            android:textStyle="bold" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_taway"
            style="@style/calculator_button_style"
            android:layout_width="@dimen/butn_width"
            android:layout_height="@dimen/butn_height"
            android:layout_margin="@dimen/butn_margin"
            android:backgroundTint="@color/medium_purpue"
            android:text="@string/btn_taway"
            android:textStyle="bold" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_0"
            style="@style/calculator_button_style"
            android:layout_width="@dimen/butn_width"
            android:layout_height="@dimen/butn_height"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2dp"
            android:backgroundTint="@color/thistle"
            android:text="@string/btn0"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dot"
            style="@style/calculator_button_style"
            android:layout_width="@dimen/butn_width"
            android:layout_height="@dimen/butn_height"
            android:layout_margin="2dp"
            android:backgroundTint="@color/thistle"
            android:text="@string/btn_dot"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            style="@style/calculator_button_style"
            android:layout_width="@dimen/butn_width"
            android:layout_height="@dimen/butn_height"
            android:layout_margin="@dimen/butn_margin"
            android:backgroundTint="@color/medium_purpue"
            android:text="@string/btn_add"
            android:textStyle="bold" />

    </GridLayout>


</FrameLayout>